# ED22-01-Avalos-Rios

./: CMakeLists.txt  Detector.cpp  Detector.hpp  Linked.cpp  Nodo.cpp  Nodo.hpp  Persona.cpp  Persona.hpp  README.md  detectPeople.cpp  detectPeopleSimple.cpp  list.cpp  list.hpp  main.cpp
src/: detectPeopleSimple.cpp  main.cpp
src/logic/: Nodo.cpp
src/logic/includes/: Nodo.h  list.hpp
